topout detection, +2rows, fumen, undo/redo

--- a/controls.html
+++ b/controls.html
@@ -1,4 +1,4 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="jquery.js"></script>
 <style>
     @font-face { font-family: Mikado; src: url('MikadoMedium.ttf'); } 
     body {
@@ -62,6 +62,12 @@
             </tr>
             <td>Restart</td><td class="input"><kbd id="9">R</kbd></td>
             </tr>
+            <tr>
+            <td>Undo</td><td class="input"><kbd id="10">T</kbd></td>
+            </tr>
+            <tr>
+            <td>Redo</td><td class="input"><kbd id="11">Y</kbd></td>
+            </tr>
             <td>[DAS] Delayed Auto Shift</td><td class="numinput"><input type="number" id="das" max=750 value=160></td>
             </tr>
             <td>[ARR] Auto Repeat Rate</td><td class="numinput"><input type="number" id="arr" max=500 value=30></td>
@@ -69,12 +75,6 @@
             <td>[SDR] Soft Drop Rate</td><td class="numinput"><input type="number" id="sdr" max=250 value=15></td>
             </tr>
             <th>Other Settings</th><th>Value</th>
-            </tr>
-            <td>Board Width - X</td><td class="numinput"><input type="number" id="boardX" value=10></td>
-            </tr>
-            <td>Board Height - Y</td><td class="numinput"><input type="number" id="boardY" value=40></td>
-            </tr>
-            <td>Hidden Rows</td><td class="numinput"><input type="number" id="hidden" min=0 value=20></td>
             </tr>
             <td>Cell Size - Pixels</td><td class="numinput"><input type="number" id="cellpx" min=3 value=20></td>
             </tr>
@@ -88,30 +88,30 @@
 <script>
 const print = console.log
 const LS = localStorage
-var ctrlDat = ['ArrowLeft','ArrowRight','ArrowDown',' ','Shift','x','z','c','r','160','30','15','10','40','20','20']
+var ctrlDat = ['ArrowLeft','ArrowRight','ArrowDown',' ','Shift','x','z','c','r','t','y','160','30','15','20']
 var ctrlsDat = LS.config
 
-if(ctrlsDat && LS.version=='2021-09-16a') {
+if(ctrlsDat && LS.version=='2021-10-12a') {
     var ctrls = JSON.parse(ctrlsDat)
-    for (let i = 0; i < 9; i++) {
+    for (let i = 0; i < 11; i++) {
         var c = ctrls[i]
         ctrlDat[i] = c
         $(`#${i+1}`).html((c.length==1?c.toUpperCase():c))
     }
-    ['das','arr','sdr','boardX','boardY','hidden','cellpx'].map((id,idx) => {
+    ['das','arr','sdr','cellpx'].map((id,idx) => {
         var ipt = document.getElementById(id)
-        var val = parseInt(ctrls[idx+9])
+        var val = parseInt(ctrls[idx+11])
         ipt.value = val
-        ctrlDat[idx+9] = val
+        ctrlDat[idx+11] = val
     })
 }
 
 function saveCtrls() {
     LS.config = JSON.stringify(ctrlDat)
-    LS.version = '2021-09-16a'
+    LS.version = '2021-10-12a'
 }
 
-for (let i = 1; i <= 9; i++) {
+for (let i = 1; i <= 11; i++) {
     document.getElementById(i).onclick = function() {
         const b = document.getElementById(i)
         if(b.innerHTML=='Press a key...') return;
@@ -127,11 +127,11 @@ for (let i = 1; i <= 9; i++) {
         }
     }
 }
-['das','arr','sdr','boardX','boardY','hidden','cellpx'].map((i,idx) => {
+['das','arr','sdr','cellpx'].map((i,idx) => {
     var ipt = document.getElementById(i)
     ipt.oninput = function(e) {
         var val = ipt.value?ipt.value:'0'
-        ctrlDat[idx+9] = val
+        ctrlDat[idx+11] = val
         saveCtrls()
     }
 })
