--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <div>
         <button onclick="importFumen()">Import Fumen</button>
     </div>
+    <div>
+        <button onclick="importImage()">Import Image</button>
+    </div>
 </body>
 <script>
 const print = console.log
@@ -174,6 +177,109 @@ function exportFumen() {
     fumen = encode(board)
     console.log(fumen)
     navigator.clipboard.writeText(fumen)
+}
+
+async function importImage() {
+    try {
+    const clipboardItems = await navigator.clipboard.read();
+    for (const clipboardItem of clipboardItems) {
+      for (const type of clipboardItem.types) {
+        const blob = await clipboardItem.getType(type);
+        //console.log(URL.createObjectURL(blob));
+
+        // Create an abstract canvas and get context
+        var mycanvas = document.createElement("canvas");
+        var ctx = mycanvas.getContext('2d');
+        
+        // Create an image
+        var img = new Image();
+
+        // Once the image loads, render the img on the canvas
+        img.onload = function(){
+            console.log(this.width, this.height)
+            scale = this.width / 10.0;
+            x = 10;
+            y = Math.min(Math.round(this.height/ scale), 20);
+            console.log(x,y)
+            mycanvas.width = x
+            mycanvas.height = y
+
+            // Draw the image
+            ctx.drawImage(img, 0, 0, x, y);
+            var data = Object.values(ctx.getImageData(0,0,x,y).data)
+            var nDat = []
+            for (let i = 0; i<data.length/4; i++) {
+                //nDat.push(data[i*4] + data[(i*4)+1] + data[(i*4)+2] < 382?1:0)
+                var hsv = rgb2hsv(data[i*4], data[(i*4)+1], data[(i*4)+2])
+                nDat.push(nearestColor(hsv[0], hsv[1], hsv[2]))
+            }
+
+            tempBoard = new Array(40-y).fill(new Array(10).fill({t: 0, c: ''})); // empty top [40-y] rows
+            for (rowIndex = 0; rowIndex < y; rowIndex++) {
+                let row = [];
+                for (colIndex = 0; colIndex < 10; colIndex++) {
+                    index = rowIndex * 10 + colIndex;
+                    temp = nDat[index]
+                    if (temp == '.') row.push({ t: 0, c: '' });
+                    else row.push({t: 1, c: temp});
+		        }
+                tempBoard.push(row);
+            }
+
+            board = JSON.parse(JSON.stringify(tempBoard));
+
+            xPOS = spawn[0]
+            yPOS = spawn[1]
+            updateGhost()
+
+            histPos++
+            hist[histPos] = {
+                "board": JSON.parse(JSON.stringify(board)),
+                "queue": JSON.parse(JSON.stringify(queue)),
+                "hold": holdP,
+                "piece": piece
+            }
+            if (histPos > 100) {
+                histPos = 100
+                hist.shift()
+            }
+            while (histPos < hist.length-1) { // remove future history if it exists
+                hist.pop()
+            }
+        };
+        
+        var URLObj = window.URL || window.webkitURL;
+        img.src = URLObj.createObjectURL(blob);
+
+      }
+    }
+  } catch (err) {
+    console.error(err.name, err.message);
+  }
+}
+
+function rgb2hsv(r,g,b) {
+    let v=Math.max(r,g,b), c=v-Math.min(r,g,b);
+    let h= c && ((v==r) ? (g-b)/c : ((v==g) ? 2+(b-r)/c : 4+(r-g)/c)); 
+    return [60*(h<0?h+6:h), v&&c/v, v];
+}
+
+function nearestColor(h,s,v) {
+    if (s<=.2 && v/2.55>=40) return 'G'
+    if (v/2.55<=40) return '.'
+
+    if (inRange(h,0,16) || inRange(h,325,360)) return 'Z'
+    else if (inRange(h,16,45)) return 'L'
+    else if (inRange(h,45,70)) return 'O'
+    else if (inRange(h,70,150)) return 'S'
+    else if (inRange(h,150,200)) return 'I'
+    else if (inRange(h,200,260)) return 'J'
+    else if (inRange(h,260,325)) return 'T'
+    return '.'
+}
+
+function inRange(x, min, max) {
+    return x >= min && x <= max;
 }
 
 async function importFumen() {
