--- a/controls.html
+++ b/controls.html
@@ -1,139 +1,207 @@
 <script src="jquery.js"></script>
 <style>
-    @font-face { font-family: Mikado; src: url('MikadoMedium.ttf'); } 
-    body {
-        text-align: center;
-        font-family: Mikado;
-    }
-    kbd {
-        background-color: #ddd;
-        border-radius: 3px;
-        border: 1px solid #ccc;
-        box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
-        color: #333;
-        display: inline-block;
-        font-size: 18px;
-        line-height: 1;
-        padding: 2px 4px;
-        white-space: nowrap;
-        cursor: pointer;
-    }
-    a {
-        transition: background-color .3s;
-        background-color: #222;
-        border-radius: 10px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    a:hover {
-        background-color: rgb(37, 83, 153);
-        cursor: pointer;
-    }
-    .input{
-        text-align: center;
-    }
-    input{
-        text-align: center;
-    }
+	@font-face {
+		font-family: Mikado;
+		src: url('MikadoMedium.ttf');
+	}
+	body {
+		text-align: center;
+		font-family: Mikado;
+	}
+	kbd {
+		background-color: #ddd;
+		border-radius: 3px;
+		border: 1px solid #ccc;
+		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
+		color: #333;
+		display: inline-block;
+		font-size: 18px;
+		line-height: 1;
+		padding: 2px 4px;
+		white-space: nowrap;
+		cursor: pointer;
+	}
+	a {
+		transition: background-color 0.3s;
+		background-color: #222;
+		border-radius: 10px;
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	a:hover {
+		background-color: rgb(37, 83, 153);
+		cursor: pointer;
+	}
+	.input {
+		text-align: center;
+	}
+	input {
+		text-align: center;
+	}
 </style>
 
-<body style="background-color:#333; color: #eee;">
-    <div style="font-size:30px; top: 50%; left: 50%; position: fixed; transform: translate(-50%, -50%);">
-        <table style="font-size:24px">
-            <th>Controls</th><th>Key</th>
-            </tr>
-            <td>Move Left</td><td class="input"><kbd id="1">ArrowLeft</kbd></td>
-            </tr>
-            <td>Move Right</td><td class="input"><kbd id="2">ArrowRight</kbd></td>
-            </tr>
-            <td>Soft Drop</td><td class="input"><kbd id="3">ArrowDown</kbd></td>
-            </tr>
-            <td>Hard Drop</td><td class="input"><kbd id="4">Space</kbd></td>
-            </tr>
-            <td>Swap Hold</td><td class="input"><kbd id="5">Shift</kbd></td>
-            </tr>
-            <td>Rotate Clockwise</td><td class="input"><kbd id="6">X</kbd></td>
-            </tr>
-            <td>Rotate Counterclockwise</td><td class="input"><kbd id="7">Z</kbd></td>
-            </tr>
-            <td>Rotate 180°</td><td class="input"><kbd id="8">C</kbd></td>
-            </tr>
-            <td>Restart</td><td class="input"><kbd id="9">R</kbd></td>
-            </tr>
-            <tr>
-            <td>Undo</td><td class="input"><kbd id="10">T</kbd></td>
-            </tr>
-            <tr>
-            <td>Redo</td><td class="input"><kbd id="11">Y</kbd></td>
-            </tr>
-            <td>[DAS] Delayed Auto Shift</td><td class="numinput"><input type="number" id="das" max=750 value=160></td>
-            </tr>
-            <td>[ARR] Auto Repeat Rate</td><td class="numinput"><input type="number" id="arr" max=500 value=30></td>
-            </tr>
-            <td>[SDR] Soft Drop Rate</td><td class="numinput"><input type="number" id="sdr" max=250 value=15></td>
-            </tr>
-            <th>Other Settings</th><th>Value</th>
-            </tr>
-            <td>Cell Size - Pixels</td><td class="numinput"><input type="number" id="cellpx" min=3 value=20></td>
-            </tr>
-        </table>
-        <br>
-        <a onclick="window.close()">Save & Close</a>
-        <a onclick="delete LS.version; delete LS.config; location.reload()">Reset to Defaults</a>
-    </div>
+<body style="background-color: #333; color: #eee">
+	<div style="font-size: 30px; top: 50%; left: 50%; position: fixed; transform: translate(-50%, -50%)">
+		<table style="font-size: 24px">
+			<th>Controls</th>
+			<th>Key</th>
+			<tr>
+				<td>Move Left</td>
+				<td class="input"><kbd id="1">ArrowLeft</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Move Right</td>
+				<td class="input"><kbd id="2">ArrowRight</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Soft Drop</td>
+				<td class="input"><kbd id="3">ArrowDown</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Hard Drop</td>
+				<td class="input"><kbd id="4">Space</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Swap Hold</td>
+				<td class="input"><kbd id="5">Shift</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Rotate Clockwise</td>
+				<td class="input"><kbd id="6">X</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Rotate Counterclockwise</td>
+				<td class="input"><kbd id="7">Z</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Rotate 180°</td>
+				<td class="input"><kbd id="8">C</kbd></td>
+			</tr>
+
+			<tr>
+				<td>Restart</td>
+				<td class="input"><kbd id="9">R</kbd></td>
+			</tr>
+
+			<tr></tr>
+			<tr>
+				<td>Undo</td>
+				<td class="input"><kbd id="10">T</kbd></td>
+			</tr>
+
+			<tr></tr>
+			<tr>
+				<td>Redo</td>
+				<td class="input"><kbd id="11">Y</kbd></td>
+			</tr>
+
+			<tr>
+				<td>[DAS] Delayed Auto Shift</td>
+				<td class="numinput"><input type="number" id="das" max="750" value="160" /></td>
+			</tr>
+
+			<tr>
+				<td>[ARR] Auto Repeat Rate</td>
+				<td class="numinput"><input type="number" id="arr" max="500" value="30" /></td>
+			</tr>
+
+			<tr>
+				<td>[SDR] Soft Drop Rate</td>
+				<td class="numinput"><input type="number" id="sdr" max="250" value="15" /></td>
+			</tr>
+
+			<tr>
+				<th>Other Settings</th>
+				<th>Value</th>
+			</tr>
+
+			<tr>
+				<td>Cell Size - Pixels</td>
+				<td class="numinput"><input type="number" id="cellpx" min="3" value="20" /></td>
+			</tr>
+
+			<tr></tr>
+		</table>
+
+		<br />
+		<a onclick="window.close()">Save & Close</a>
+		<a onclick="delete LS.version; delete LS.config; location.reload()">Reset to Defaults</a>
+	</div>
 </body>
 
 <script>
-const print = console.log
-const LS = localStorage
-var ctrlDat = ['ArrowLeft','ArrowRight','ArrowDown',' ','Shift','x','z','c','r','t','y','160','30','15','20']
-var ctrlsDat = LS.config
+	const print = console.log;
+	const LS = localStorage;
+	var ctrlDat = [
+		'ArrowLeft',
+		'ArrowRight',
+		'ArrowDown',
+		' ',
+		'Shift',
+		'x',
+		'z',
+		'c',
+		'r',
+		't',
+		'y',
+		'160',
+		'30',
+		'15',
+		'20',
+	];
+	var ctrlsDat = LS.config;
 
-if(ctrlsDat && LS.version=='2021-10-12a') {
-    var ctrls = JSON.parse(ctrlsDat)
-    for (let i = 0; i < 11; i++) {
-        var c = ctrls[i]
-        ctrlDat[i] = c
-        $(`#${i+1}`).html((c.length==1?c.toUpperCase():c))
-    }
-    ['das','arr','sdr','cellpx'].map((id,idx) => {
-        var ipt = document.getElementById(id)
-        var val = parseInt(ctrls[idx+11])
-        ipt.value = val
-        ctrlDat[idx+11] = val
-    })
-}
+	if (ctrlsDat && LS.version == '2021-10-12a') {
+		var ctrls = JSON.parse(ctrlsDat);
+		for (let i = 0; i < 11; i++) {
+			var c = ctrls[i];
+			ctrlDat[i] = c;
+			$(`#${i + 1}`).html(c.length == 1 ? c.toUpperCase() : c);
+		}
+		['das', 'arr', 'sdr', 'cellpx'].map((id, idx) => {
+			var ipt = document.getElementById(id);
+			var val = parseInt(ctrls[idx + 11]);
+			ipt.value = val;
+			ctrlDat[idx + 11] = val;
+		});
+	}
 
-function saveCtrls() {
-    LS.config = JSON.stringify(ctrlDat)
-    LS.version = '2021-10-12a'
-}
+	function saveCtrls() {
+		LS.config = JSON.stringify(ctrlDat);
+		LS.version = '2021-10-12a';
+	}
 
-for (let i = 1; i <= 11; i++) {
-    document.getElementById(i).onclick = function() {
-        const b = document.getElementById(i)
-        if(b.innerHTML=='Press a key...') return;
-        b.innerHTML = 'Press a key...'
+	for (let i = 1; i <= 11; i++) {
+		document.getElementById(i).onclick = function () {
+			const b = document.getElementById(i);
+			if (b.innerHTML == 'Press a key...') return;
+			b.innerHTML = 'Press a key...';
 
-        document.addEventListener('keydown', respond)
-        function respond(e) {
-            var k = e.code
-            ctrlDat[i-1] = k
-            b.innerHTML = k
-            saveCtrls()
-            document.removeEventListener('keydown', respond)
-        }
-    }
-}
-['das','arr','sdr','cellpx'].map((i,idx) => {
-    var ipt = document.getElementById(i)
-    ipt.oninput = function(e) {
-        var val = ipt.value?ipt.value:'0'
-        ctrlDat[idx+11] = val
-        saveCtrls()
-    }
-})
-
+			document.addEventListener('keydown', respond);
+			function respond(e) {
+				var k = e.code;
+				ctrlDat[i - 1] = k;
+				b.innerHTML = k;
+				saveCtrls();
+				document.removeEventListener('keydown', respond);
+			}
+		};
+	}
+	['das', 'arr', 'sdr', 'cellpx'].map((i, idx) => {
+		var ipt = document.getElementById(i);
+		ipt.oninput = function (e) {
+			var val = ipt.value ? ipt.value : '0';
+			ctrlDat[idx + 11] = val;
+			saveCtrls();
+		};
+	});
 </script>
