--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 	var yPOS = spawn[1];
 	var xGHO = spawn[0];
 	var yGHO = spawn[1];
+	var lastAction = '';
 	var hist = [];
 	var histPos = 0;
 	var ctx = document.getElementById('b').getContext('2d');
@@ -245,6 +246,7 @@
 						for (let i = 0; i < data.length / 4; i++) {
 							//nDat.push(data[i*4] + data[(i*4)+1] + data[(i*4)+2] < 382?1:0)
 							var hsv = rgb2hsv(data[i * 4], data[i * 4 + 1], data[i * 4 + 2]);
+							// console.log(hsv, nearestColor(hsv[0], hsv[1], hsv[2])); // debugging purposes
 							nDat.push(nearestColor(hsv[0], hsv[1], hsv[2]));
 						}
 
@@ -286,12 +288,15 @@
 	}
 
 	function nearestColor(h, s, v) {
-		if (s <= 0.2 && v / 2.55 >= 25) return 'G';
-		if (v / 2.55 <= 40) return '.';
+		if (inRange(h, 0, 30) && inRange(s, 0, 1) && inRange(v, 133, 135)) return 'G'; // attempted manual override specifically for four.lol idk
+		if (inRange(h, 220, 225) && inRange(s, 0, 0.2) && v == 65) return '.';
+
+		if (s <= 0.2 && v / 2.55 >= 55) return 'G';
+		if (v / 2.55 <= 55) return '.';
 
 		if (inRange(h, 0, 16) || inRange(h, 325, 360)) return 'Z';
-		else if (inRange(h, 16, 40)) return 'L';
-		else if (inRange(h, 40, 70)) return 'O';
+		else if (inRange(h, 16, 37)) return 'L';
+		else if (inRange(h, 37, 70)) return 'O';
 		else if (inRange(h, 70, 150)) return 'S';
 		else if (inRange(h, 150, 200)) return 'I';
 		else if (inRange(h, 200, 265)) return 'J';
@@ -404,7 +409,7 @@
 		temp = false;
 		ctxN.clearRect(0, 0, 90, 360);
 		ctxH.clearRect(0, 0, 90, 60);
-		for (let i = 0; i < 9; i++) {
+		for (let i = 0; i < 7; i++) {
 			if (queue[i] == '|') {
 				ctxN.beginPath();
 				ctxN.moveTo(0, i * 60);
@@ -641,6 +646,7 @@
 						xPOS--;
 						updateGhost();
 						playSnd('Move');
+						lastAction = 'L';
 					}
 					break;
 				case 'R':
@@ -648,11 +654,13 @@
 						xPOS++;
 						updateGhost();
 						playSnd('Move');
+						lastAction = 'R';
 					}
 					break;
 				case 'SD':
 					if (canMove(pieces[piece][rot], xPOS, yPOS + 1)) {
 						yPOS++;
+						lastAction = 'SD';
 					}
 					break;
 			}
@@ -670,6 +678,7 @@
 					yPOS -= kick[1];
 					rot = newRot;
 					playSnd('Rotate', true);
+					lastAction = 'ROT';
 					break;
 				}
 			}
@@ -728,6 +737,8 @@
 			checkLines();
 			newPiece();
 
+			lastAction = 'HD';
+
 			updateHistory();
 		}
 
@@ -749,9 +760,41 @@
 			updateGhost();
 			setShape();
 			updateQueue();
+			lastAction = 'HOLD';
 		}
 
 		function checkLines() {
+			tspin = false;
+			mini = false;
+			pc = false;
+			if (piece == 'T' && lastAction == 'ROT') {
+				corners = [
+					[yPOS + 1, xPOS],
+					[yPOS + 1, xPOS + 2],
+					[yPOS + 3, xPOS + 2],
+					[yPOS + 3, xPOS],
+				];
+				facingCorners = [corners[rot], corners[(rot + 1) % 4]];
+
+				filledCorners = 0;
+				corners.forEach((corner) => {
+					if (corner[0] >= 40 || corner[1] < 0 || corner[1] >= 10) filledCorners++;
+					else if (board[corner[0]][corner[1]]['t'] == 1) filledCorners++;
+				});
+				tspin = filledCorners >= 3;
+
+				if (tspin) {
+					filledFacingCorners = 0;
+					facingCorners.forEach((corner) => {
+						if (corner[0] >= 40 || corner[1] < 0 || corner[1] >= 10) FilledFacingCorners++;
+						else if (board[corner[0]][corner[1]]['t'] == 1) filledFacingCorners++;
+					});
+					mini = filledFacingCorners < 2; // no I'm not adding the "TST Kick and Fin Kick" exceptions. STSDs and Fins deserve to be mini
+				}
+			}
+
+			if (board[board.length - 1].filter((c) => c.t == 0).length == boardSize[0]) pc = true;
+
 			board = board.filter(
 				(r) =>
 					!r
@@ -766,25 +809,17 @@
 				cleared++;
 				board.unshift(aRow());
 			}
-			switch (cleared) {
-				case 1:
-					notify('SINGLE');
-					break;
-				case 2:
-					notify('DOUBLE');
-					break;
-				case 3:
-					notify('TRIPLE');
-					break;
-				case 4:
-					notify('TETRIS');
-					playSnd('ClearTetra', true);
-					break;
-			}
-			if (board[board.length - 1].filter((c) => c.t == 0).length == boardSize[0]) {
-				notify('PERFECT\nCLEAR!');
-				playSnd('PerfectClear', 1);
-			}
+
+			text = '';
+			if (mini) text += 'MINI ';
+			if (tspin) text += 'T-SPIN ';
+			if (cleared > 4) cleared = 4; // nani
+			if (tspin) text += ['NULL', 'SINGLE', 'DOUBLE', 'TRIPLE', 'QUAD'][cleared];
+			if (pc) text = 'PERFECT\nCLEAR!';
+
+			if (text != '') notify(text);
+			if (tspin || cleared == 4) playSnd('ClearTetra', true);
+			if (pc) playSnd('PerfectClear', 1);
 		}
 
 		function drawCell(x, y, piece, type) {
