unfocus buttons after clicking once

--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
 			<canvas id="n" width="90" height="360"></canvas>
 		</div>
 		<div>
-			<button onclick="shuffleQueue()">Shuffle Queue</button>
+			<button onclick="this.blur(); shuffleQueue();">Shuffle Queue</button>
 		</div>
 		<div>
-			<button onclick="shuffleQueuePlusHold()">Shuffle Queue + Hold</button>
+			<button onclick="this.blur(); shuffleQueuePlusHold();">Shuffle Queue + Hold</button>
 		</div>
 	</div>
 	<div>
-		<button onclick="window.open('https\:\/\/github.com/swng/zztetris#readme')">About</button>
+		<button onclick="this.blur(); window.open('https\:\/\/github.com/swng/zztetris#readme')">About</button>
 	</div>
 	<div>
 		<button target="popup" onclick="ctrlsPopup()">Game Settings</button>
 	</div>
 	<div>
-		<button onclick="exportFumen()">Export Fumen</button>
+		<button onclick="this.blur(); exportFumen()">Export Fumen</button>
 	</div>
 	<div>
-		<button onclick="importFumen()">Import Fumen</button>
+		<button onclick="this.blur(); importFumen()">Import Fumen</button>
 	</div>
 	<div>
-		<button onclick="importImage()">Import Image</button>
+		<button onclick="this.blur(); importImage()">Import Image</button>
 	</div>
 </body>
 <script>
