--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 						for (let i = 0; i < data.length / 4; i++) {
 							//nDat.push(data[i*4] + data[(i*4)+1] + data[(i*4)+2] < 382?1:0)
 							var hsv = rgb2hsv(data[i * 4], data[i * 4 + 1], data[i * 4 + 2]);
-							// console.log(hsv, nearestColor(hsv[0], hsv[1], hsv[2])); // debugging purposes
+							console.log(hsv, nearestColor(hsv[0], hsv[1], hsv[2])); // debugging purposes
 							nDat.push(nearestColor(hsv[0], hsv[1], hsv[2]));
 						}
 
@@ -288,7 +288,7 @@
 	}
 
 	function nearestColor(h, s, v) {
-		if (inRange(h, 0, 30) && inRange(s, 0, 1) && inRange(v, 133, 135)) return 'X'; // attempted manual override specifically for four.lol idk
+		if (inRange(h, 0, 30) && inRange(s, 0, 1) && (inRange(v, 133, 135) || inRange(v, 65, 85))) return 'X'; // attempted manual override specifically for four.lol idk
 		if (inRange(h, 220, 225) && inRange(s, 0, 0.2) && v == 65) return '.';
 
 		if (s <= 0.2 && v / 2.55 >= 55) return 'X';
@@ -299,8 +299,8 @@
 		else if (inRange(h, 37, 70)) return 'O';
 		else if (inRange(h, 70, 150)) return 'S';
 		else if (inRange(h, 150, 200)) return 'I';
-		else if (inRange(h, 200, 265)) return 'J';
-		else if (inRange(h, 265, 325)) return 'T';
+		else if (inRange(h, 200, 266)) return 'J';
+		else if (inRange(h, 266, 325)) return 'T';
 		return '.';
 	}
 
