--- a/index.html
+++ b/index.html
@@ -266,8 +266,10 @@
 
 						xPOS = spawn[0];
 						yPOS = spawn[1];
+                        rot = 0;
+						clearActive();
 						updateGhost();
-
+						setShape();
 						updateHistory();
 					};
 
@@ -315,8 +317,10 @@
 
 		xPOS = spawn[0];
 		yPOS = spawn[1];
+        rot = 0;
+		clearActive();
 		updateGhost();
-
+		setShape();
 		updateHistory();
 	}
 
