--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 									}
 								}
 								if (matches == 4) {
-									// that's a match
+									// that's a match; color it
 									drawn.forEach((coordinate) => {
 										board[coordinate.y][coordinate.x].c = name;
 									});
