--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="tetris-fumen.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="icon" href="./pieceSprite/z.png" />
-	<link rel="stylesheet" type="text/css" href="/zztetris.css" />
+	<link rel="stylesheet" type="text/css" href="zztetris.css" />
 	<head>
 		<meta charset="UTF-8" />
 		<meta property="og:type" content="website" />
