--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 			</label>
             <div></div>
 		</form>
-        <input type="checkbox" id="grav"> <label for="grav">disable gravity</label>
+        <input type="checkbox" checked id="autocolor"> <label for="autocolor">autocolor</label>
+        <div></div>
+        <input type="checkbox" checked id="grav"> <label for="grav">gravity</label>
 	</body>
 </html>
