Move paint bucket to the right

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="icon" href="./pieceSprite/z.png" />
 	<link rel="stylesheet" type="text/css" href="zztetris.css" />
+	<link rel="stylesheet" type="text/css" href="styles/paint_bucket.css" />
 	<head>
 		<meta charset="UTF-8" />
 		<meta property="og:type" content="website" />
@@ -23,28 +24,66 @@
 		<title>ZZTetris</title>
 	</head>
 	<body style="background-color: #222; color: #fff">
+
 		<div style="top: 50%; left: 50%; position: fixed; transform: translate(-50%, -50%); display: flex">
 			<div class="queue">
-				HOLD
-				<hr />
+				HOLD<hr />
 				<canvas id="h" width="90" height="60"></canvas>
 				<div id="notif" style="width: 90px; text-align: center"></div>
 			</div>
+
 			<div>
 				<canvas id="b" width="200" height="400" style="padding: 18px"></canvas>
 			</div>
+
 			<div class="queue">
-				NEXT
-				<hr />
+				NEXT<hr />
 				<canvas id="n" width="90" height="360"></canvas>
 			</div>
-			<div>
+
+			<div class="board-settings">
 				<button class="button" onclick="this.blur(); shuffleQueue();">Shuffle Queue</button>
-			</div>
-			<div>
 				<button class="button" onclick="this.blur(); shuffleQueuePlusHold();">Shuffle Queue + Hold</button>
+
+				<form class="paint-bucket" name="paintbucket">
+					<label for="X">
+						<input type="radio" name="paintbucket" class="paintbucket" id="X" value="X" checked />
+						<span></span>
+					</label>
+					<label for="I">
+						<input type="radio" name="paintbucket" class="paintbucket" id="I" value="I" />
+						<span></span>
+					</label>
+					<label for="J">
+						<input type="radio" name="paintbucket" class="paintbucket" id="J" value="J" />
+						<span></span>
+					</label>
+					<label for="S">
+						<input type="radio" name="paintbucket" class="paintbucket" id="S" value="S" />
+						<span></span>
+					</label>
+					<div></div>
+					<label for="O">
+						<input type="radio" name="paintbucket" class="paintbucket" id="O" value="O" />
+						<span></span>
+					</label>
+					<label for="Z">
+						<input type="radio" name="paintbucket" class="paintbucket" id="Z" value="Z" />
+						<span></span>
+					</label>
+					<label for="L">
+						<input type="radio" name="paintbucket" class="paintbucket" id="L" value="L" />
+						<span></span>
+					</label>
+					<label for="T">
+						<input type="radio" name="paintbucket" class="paintbucket" id="T" value="T" />
+						<span></span>
+					</label>
+					<div></div>
+				</form>
 			</div>
 		</div>
+
 		<button class="button" onclick="this.blur(); window.open('https\:\/\/github.com/swng/zztetris#readme')">
 			About
 		</button>
@@ -63,42 +102,6 @@
         <button class="button" onclick="this.blur(); fullMirror()">Full Mirror</button>
 
 
-		<form name="paintbucket">
-			<label for="X">
-				<input type="radio" name="paintbucket" class="paintbucket" id="X" value="X" checked />
-				<span></span>
-			</label>
-			<label for="I">
-				<input type="radio" name="paintbucket" class="paintbucket" id="I" value="I" />
-				<span></span>
-			</label>
-			<label for="J">
-				<input type="radio" name="paintbucket" class="paintbucket" id="J" value="J" />
-				<span></span>
-			</label>
-			<label for="S">
-				<input type="radio" name="paintbucket" class="paintbucket" id="S" value="S" />
-				<span></span>
-			</label>
-            <div></div>
-			<label for="O">
-				<input type="radio" name="paintbucket" class="paintbucket" id="O" value="O" />
-				<span></span>
-			</label>
-			<label for="Z">
-				<input type="radio" name="paintbucket" class="paintbucket" id="Z" value="Z" />
-				<span></span>
-			</label>
-			<label for="L">
-				<input type="radio" name="paintbucket" class="paintbucket" id="L" value="L" />
-				<span></span>
-			</label>
-			<label for="T">
-				<input type="radio" name="paintbucket" class="paintbucket" id="T" value="T" />
-				<span></span>
-			</label>
-            <div></div>
-		</form>
         <input type="checkbox" checked id="autocolor"> <label for="autocolor">autocolor</label>
         <div></div>
         <input type="checkbox" checked id="grav"> <label for="grav">gravity</label>
