--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 	<body style="background-color: #222; color: #fff">
 
 		<div style="top: 50%; left: 50%; position: fixed; transform: translate(-50%, -50%); display: flex">
+			<div class="import-export">
+				<button class="button" onclick="this.blur(); exportFumen()">Export Fumen</button>
+				<button class="button" onclick="this.blur(); importFumen()">Import Fumen</button>
+				<button class="button" onclick="this.blur(); exportFullFumen()">Export Full Fumen</button>
+				<button class="button" onclick="this.blur(); importFullFumen()">Import Full Fumen</button>
+				<button class="button" onclick="this.blur(); exportTetrio()">Export TETRIO</button>
+				<button class="button" onclick="this.blur(); importTetrio()">Import TETRIO</button>
+				<button class="button" onclick="this.blur(); importImage()">Import Image</button>
+			</div>
+
 			<div class="queue">
 				HOLD<hr />
 				<canvas id="h" width="90" height="60"></canvas>
@@ -92,16 +102,7 @@
 		</button>
 		<button class="button" target="popup" onclick="ctrlsPopup()">Game Settings</button>
 		<div></div>
-		<button class="button" onclick="this.blur(); exportFumen()">Export Fumen</button>
-		<button class="button" onclick="this.blur(); importFumen()">Import Fumen</button>
-		<button class="button" onclick="this.blur(); importImage()">Import Image</button>
-        <button class="button" onclick="this.blur(); exportTetrio()">Export TETRIO</button>
-        <button class="button" onclick="this.blur(); importTetrio()">Import TETRIO</button>
-        <div></div>
-        <button class="button" onclick="this.blur(); exportFullFumen()">Export Full Fumen</button>
-        <button class="button" onclick="this.blur(); importFullFumen()">Import Full Fumen</button>
-		<div></div>
-
+		
         <input type="checkbox" checked id="autocolor"> <label for="autocolor">autocolor</label>
         <div></div>
         <input type="checkbox" checked id="grav"> <label for="grav">gravity</label>
